--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,4 @@ add_subdirectory(toulbar2-cpd)
 
 find_package(Torch REQUIRED)
 
-target_link_libraries(DLDOProject "${TORCH_LIBRARIES}")
+#target_link_libraries(DLDOProject "${TORCH_LIBRARIES}")
